--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,8 +9,6 @@
     --font-montserrat: "Montserrat", sans-serif; 
 }
 
-
-
 * {
     margin: 0;
     padding: 0;
@@ -55,25 +53,25 @@ body {
 }
 
 .apresentacao__conteudo {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 82px;
     text-align: left;
 }
 
 .apresentacao__conteudo__titulo{
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--font-krona);
 }
 
 .apresentacao__conteudo__paragrafo{
-    font-size: 26px;
+    font-size: 1.6rem;
     font-family: var(--font-montserrat); 
 }
 
 .apresentacao__img{
-    height: 550px;
+    width: 50%;
 }
 
 .apresentacao__link{
@@ -87,16 +85,16 @@ body {
 .apresentacao__subtitulo{
     font-family: var(--font-krona);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .apresentacao__link__botao { 
     display: flex;
     justify-content: center;
     border-radius: 8px;
-    width: 378px;
+    width: 50%;
     text-align: center;
-    font-size: 24px;
+    font-size: 1.5rem;
     padding: 16px 0px;
     text-decoration: none;
     font-family: var(--font-montserrat);
@@ -113,8 +111,27 @@ body {
 .rodape {
     text-align: center;
     font-family: var(--font-montserrat);
-    font-size: 24px;
-    padding: 23.64px 0px;
+    font-size: 1.5rem;
+    padding: 24px 0px;
     color: var(--cor-primaria);
     background-color: var(--cor-terciaria);
+}
+
+@media (max-width: 1200px) {
+    .cabecalho{
+        padding: 10%;
+    }
+
+    .cabecalho__menu{
+        justify-content: center;
+    }
+
+    .apresentacao{
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+
+    .apresentacao__conteudo{
+        width: auto;
+    }
 }
