--- a/styles/styles.css
+++ b/styles/styles.css
@@ -134,4 +134,8 @@ body {
     .apresentacao__conteudo{
         width: auto;
     }
+
+    .apresentacao__link__botao {
+        width: 90%;
+    }
 }
